devel
-----

* No longer put system services in _app on single server. On cluster, this
  has never worked. This was unnecessary.

* Fixed available flag for hotbackup.

* Fixed list with id for partially available hotbackups.

* Added AQL optimizer rule "move-filters-into-enumerate", to allow for
  early pruning of non-matching documents while full-scanning or index-
  scanning documents. This optimization can help to avoid a lot of
  temporary document copies.

* Added "SmartJoins for Views" to the ArangoDB Enterprise Edition that allows running
  cluster joins between two certain sharded collections or views with performance close
  to that of a local join operation.

* Allow collection names to be at most 256 characters long, instead of 64 characters
  in previous versions.

* Upgraded bundled Boost library version to 1.71.

* The General Graph document API is now consistent with the document API in its error messages.
  When attempting to create / modify edges pointing to non existing vertex collections
  HTTP 400 is returned instead of 404.

* Use `-std=c++17` for ArangoDB compilation.

* Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.

* Fixed search not working in document view while in code mode.

* Show shards of all collections (including system collections) in the web UI's shard
  distribution view.

  This is necessary to access the prototype collections of a collection sharded via
  `distributeShardsLike` in case the prototype is a system collection, and the prototype
  should be moved to another server.

* Rclone URL normalization.

* Fixed unintended multiple unlock commands from coordinator to
  transaction locked db servers.

* Disallow using `_id` or `_rev` as shard keys in clustered collections.

  Using these attributes for sharding was not supported before, but didn't trigger
  any errors. Instead, collections were created and silently using `_key` as