@@ -27,6 +27,7 @@
 #include "RestAdminStatisticsHandler.h"
 #include "GeneralServer/ServerSecurityFeature.h"
 #include "Statistics/Descriptions.h"
+#include "Statistics/RequestStatistics.h"
 #include "Statistics/StatisticsFeature.h"
 
 using namespace arangodb;
@@ -85,8 +86,12 @@ void RestAdminStatisticsHandler::getStatistics() {
   tmp.close();  // system
 
   tmp.add("client", VPackValue(VPackValueType::Object, true));
-  desc->clientStatistics(tmp);
+  desc->clientStatistics(tmp, stats::RequestStatisticsSource::ALL);
   tmp.close();  // client
+
+  tmp.add("clientUser", VPackValue(VPackValueType::Object, true));
+  desc->clientStatistics(tmp, stats::RequestStatisticsSource::USER);
+  tmp.close();  // clientUser
 
   tmp.add("http", VPackValue(VPackValueType::Object, true));
   desc->httpStatistics(tmp);
