@@ -59,6 +59,12 @@ extern StatisticsDistribution TRI_IoTimeDistributionStatistics;
 extern StatisticsDistribution TRI_QueueTimeDistributionStatistics;
 extern StatisticsDistribution TRI_RequestTimeDistributionStatistics;
 extern StatisticsDistribution TRI_TotalTimeDistributionStatistics;
+extern StatisticsDistribution TRI_BytesReceivedDistributionStatisticsUser;
+extern StatisticsDistribution TRI_BytesSentDistributionStatisticsUser;
+extern StatisticsDistribution TRI_IoTimeDistributionStatisticsUser;
+extern StatisticsDistribution TRI_QueueTimeDistributionStatisticsUser;
+extern StatisticsDistribution TRI_RequestTimeDistributionStatisticsUser;
+extern StatisticsDistribution TRI_TotalTimeDistributionStatisticsUser;
 }  // namespace basics
 
 class StatisticsFeature final : public application_features::ApplicationFeature {
