@@ -95,6 +95,19 @@ struct StatisticsDistribution {
     ++(*j);
   }
 
+  void add(StatisticsDistribution& other) {
+    MUTEX_LOCKER(lock, _mutex);
+    MUTEX_LOCKER(lock2, other._mutex);
+    TRI_ASSERT(_counts.size() == other._counts.size() &&
+               _cuts.size() == _cuts.size());
+    _count += other._count;
+    _total += other._total;
+    for (size_t i = 0; i < _counts.size(); ++i) {
+      TRI_ASSERT(i < _cuts.size() ? _cuts[i] == other._cuts[i] : true);
+      _counts[i] += other._counts[i];
+    }
+  }
+
   uint64_t _count;
   double _total;
   std::vector<double> _cuts;
